[package]
name = "tcoi"
authors = ["Husayn al-Qurashi <husayn@dnmx.org>"]
description = "A New Form of Decentralised Hashing."
readme = "README.md"
homepage = "https://github.com/qurashiakh/tcoi"
repository = "https://github.com/qurashiakh/tcoi"
license = "GPL-3.0-only"
keywords = ["ishaq", "hashing", "code"]
version = "0.2.0"
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rand = "0.8.5"
